--- a/cinder-storage.yaml
+++ b/cinder-storage.yaml
@@ -100,6 +100,13 @@ parameters:
     description: The user password for SNMPd with readonly rights running on all Overcloud nodes
     type: string
     hidden: true
+  UpdateIdentifier:
+    default: ''
+    type: string
+    description: >
+      Setting to a previously unused value during stack-update will trigger
+      package update on all nodes
+
 resources:
   BlockStorage:
     type: OS::Nova::Server
