Reuse the undercloud service passwords as db passwords.
We need to stop using "unset" as the password for all databases. Ideally we
would add a "XxxxDSN" parameter (e.g. KeystoneDSN) but to remain consistent
with the overcloud for now we reuse the service passwords

Change-Id: I35c4fa3478eea92f81aa381fd2ab5fac5aae849f

--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -260,7 +260,7 @@ resources:
           recheck_interval : 5
           quorum_policy : ignore
         ceilometer:
-          db: mysql://ceilometer:unset@localhost/ceilometer
+          db: {list_join: ['', ['mysql://ceilometer:', {get_param: CeilometerPassword}, '@localhost/ceilometer']]}
           debug: {get_param: Debug}
           metering_secret: {get_param: CeilometerMeteringSecret}
           snmpd_readonly_user_name:
@@ -272,7 +272,7 @@ resources:
         db-password: unset
         glance:
           backend: file
-          db: mysql://glance:unset@localhost/glance
+          db: {list_join: ['', ['mysql://glance:', {get_param: GlancePassword}, '@localhost/glance']]}
           debug: {get_param: Debug}
           host: 127.0.0.1
           port:
@@ -291,14 +291,14 @@ resources:
           admin_tenant_name: service
           admin_user: heat
           auth_encryption_key: unset___________
-          db: mysql://heat:unset@localhost/heat
+          db: {list_join: ['', ['mysql://heat:', {get_param: HeatPassword}, '@localhost/heat']]}
           debug: {get_param: Debug}
           stack_domain_admin_password: {get_param: HeatStackDomainAdminPassword}
           watch_server_url: {get_input: heat.watch_server_url}
           metadata_server_url: {get_input: heat.metadata_server_url}
           waitcondition_server_url: {get_input: heat.waitcondition_server_url}
         keystone:
-          db: mysql://keystone:unset@localhost/keystone
+          db: {list_join: ['', ['mysql://keystone:', {get_param: AdminToken}, '@localhost/keystone']]}
           debug: {get_param: Debug}
           host: 127.0.0.1
           ca_certificate: {get_param: KeystoneCACertificate}
@@ -314,7 +314,7 @@ resources:
         neutron:
           debug: {get_param: Debug}
           host: 127.0.0.1
-          ovs_db: mysql://neutron:unset@localhost/ovs_neutron?charset=utf8
+          ovs_db: {list_join: ['', ['mysql://neutron:', {get_param: NeutronPassword}, '@localhost/ovs_neutron?charset=utf8']]}
           ovs:
             local_ip:
               get_input: controller_host
