--- a/undercloud-vm-ironic-config.yaml
+++ b/undercloud-vm-ironic-config.yaml
@@ -8,7 +8,7 @@ resources:
           compute_driver: {get_param: NovaComputeDriver}
           compute_manager: {get_param: NovaComputeManager}
           scheduler_host_manager: {get_param: NovaSchedulerHostManager}
-          db: mysql://nova:unset@localhost/nova
+          db: {list_join: ['', ['mysql://nova:', {get_param: NovaPassword}, '@localhost/nova']]}
           debug: {get_param: Debug}
           default_ephemeral_format: ext4
           host: 127.0.0.1
@@ -22,6 +22,6 @@ resources:
     properties:
       config:
         ironic:
-          db: mysql://ironic:unset@localhost/ironic
+          db: {list_join: ['', ['mysql://ironic:', {get_param: IronicPassword}, '@localhost/ironic']]}
           service-password: {get_input: ironic_service_password}
           virtual_power_ssh_key: {get_input: virtual_power_ssh_key}
