--- a/undercloud-bm-nova-config.yaml
+++ b/undercloud-bm-nova-config.yaml
@@ -8,7 +8,7 @@ resources:
           compute_driver: {get_param: NovaComputeDriver}
           compute_manager: {get_param: NovaComputeManager}
           scheduler_host_manager: {get_param: NovaSchedulerHostManager}
-          db: mysql://nova:unset@localhost/nova
+          db: {list_join: ['', ['mysql://nova:', {get_param: NovaPassword}, '@localhost/nova']]}
           default_ephemeral_format: ext4
           host: 127.0.0.1
           metadata-proxy: false
@@ -17,7 +17,7 @@ resources:
             reserved_host_memory_mb: 0
           baremetal:
             arch: {get_input: nova_arch}
-            db: mysql://nova:unset@localhost/nova_bm
+            db: {list_join: ['', ['mysql://nova:', {get_param: NovaPassword}, '@localhost/nova_bm']]}
             power_manager: {get_input: power_manager}
             pxe_deploy_timeout: {get_input: pxe_deploy_timeout}
           service-password: {get_input: nova_service_password}
