--- a/net-config-bridge.yaml
+++ b/net-config-bridge.yaml
@@ -3,6 +3,28 @@ heat_template_version: 2015-04-30
 description: >
   Software Config to drive os-net-config for a simple bridge.
 
+parameters:
+  ExternalIpSubnet:
+    default: ''
+    description: IP address/subnet on the external network
+    type: string
+  InternalApiIpSubnet:
+    default: ''
+    description: IP address/subnet on the internal API network
+    type: string
+  StorageIpSubnet:
+    default: ''
+    description: IP address/subnet on the storage network
+    type: string
+  StorageMgmtIpSubnet:
+    default: ''
+    description: IP address/subnet on the storage mgmt network
+    type: string
+  TenantIpSubnet:
+    default: ''
+    description: IP address/subnet on the tenant network
+    type: string
+
 resources:
   OsNetConfigImpl:
     type: OS::Heat::StructuredConfig
