--- a/net-config-noop.yaml
+++ b/net-config-noop.yaml
@@ -4,6 +4,28 @@ description: >
   Software Config to no-op for os-net-config. Using this will allow you
   to use the parameter driven (init-neutron-ovs) configuration instead.
 
+parameters:
+  ExternalIpSubnet:
+    default: ''
+    description: IP address/subnet on the external network
+    type: string
+  InternalApiIpSubnet:
+    default: ''
+    description: IP address/subnet on the internal API network
+    type: string
+  StorageIpSubnet:
+    default: ''
+    description: IP address/subnet on the storage network
+    type: string
+  StorageMgmtIpSubnet:
+    default: ''
+    description: IP address/subnet on the storage mgmt network
+    type: string
+  TenantIpSubnet:
+    default: ''
+    description: IP address/subnet on the tenant network
+    type: string
+
 resources:
   OsNetConfigImpl:
     type: OS::Heat::StructuredConfig
