--- a/puppet/controller-post-puppet.yaml
+++ b/puppet/controller-post-puppet.yaml
@@ -10,16 +10,7 @@ parameters:
 resources:
 
   ControllerPuppetConfig:
-    type: OS::Heat::SoftwareConfig
-    properties:
-      group: puppet
-      options:
-        enable_hiera: True
-        enable_facter: False
-      outputs:
-      - name: result
-      config:
-        get_file: manifests/overcloud_controller.pp
+    type: OS::TripleO::ControllerConfig
 
   # Step through a series of Puppet runs using the same manifest.
   # NOTE(dprince): Heat breakpoints would make for a really cool way to step
