Provide RabbitMQ clients with a list of servers instead of VIP
This will change the way how RabbitMQ clients get to the servers,
they will not go through HAProxy anymore.

Change-Id: I522d7520b383a280505e0e7c8fecba9ac02d2c9b

--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -62,10 +62,14 @@ resources:
                   list_join:
                   - ','
                   - {get_param: controller_names}
-                rabbit_node_ips:
-                  list_join:
-                  - ','
-                  - {get_param: controller_ips}
+                rabbit_node_ips: &rabbit_nodes_array
+                  str_replace:
+                    template: "['SERVERS_LIST']"
+                    params:
+                      SERVERS_LIST:
+                        list_join:
+                        - "','"
+                        - {get_param: controller_ips}
                 mongo_node_ips:
                   list_join:
                   - ','
@@ -78,6 +82,13 @@ resources:
                   list_join:
                   - ','
                   - {get_param: controller_ips}
+                # NOTE(gfidente): interpolation with %{} in the
+                # hieradata file can't be used as it returns string
+                ceilometer::rabbit_hosts: *rabbit_nodes_array
+                cinder::rabbit_hosts: *rabbit_nodes_array
+                heat::rabbit_hosts: *rabbit_nodes_array
+                neutron::rabbit_hosts: *rabbit_nodes_array
+                nova::rabbit_hosts: *rabbit_nodes_array
 
 outputs:
   config_id:
