Add Redis as a Pacemaker resource
Change-Id: I731b408f24da01c1bc897bfffe8fd4d5638932ed

--- a/controller.yaml
+++ b/controller.yaml
@@ -364,6 +364,9 @@ parameters:
     default: 5672
     description: Set rabbit subscriber port, change this if using SSL
     type: number
+  RedisVirtualIP:
+    type: string
+    default: ''  # Has to be here because of the ignored empty value bug
   SnmpdReadonlyUserName:
     default: ro_snmp_user
     description: The user name for SNMPd with readonly rights running on all Overcloud nodes
