--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -495,7 +495,6 @@ resources:
   NetworkDeployment:
     type: OS::TripleO::SoftwareDeployment
     properties:
-      signal_transport: NO_SIGNAL
       config: {get_resource: NetworkConfig}
       server: {get_resource: Controller}
       input_values:
@@ -504,8 +503,8 @@ resources:
 
   ControllerDeployment:
     type: OS::TripleO::SoftwareDeployment
+    depends_on: NetworkDeployment
     properties:
-      signal_transport: NO_SIGNAL
       config: {get_resource: ControllerConfig}
       server: {get_resource: Controller}
       input_values:
