--- a/puppet/compute-puppet.yaml
+++ b/puppet/compute-puppet.yaml
@@ -304,7 +304,6 @@ resources:
   NetworkDeployment:
     type: OS::TripleO::SoftwareDeployment
     properties:
-      signal_transport: NO_SIGNAL
       config: {get_resource: NetworkConfig}
       server: {get_resource: NovaCompute}
       input_values:
@@ -388,8 +387,8 @@ resources:
 
   NovaComputeDeployment:
     type: OS::TripleO::SoftwareDeployment
+    depends_on: NetworkDeployment
     properties:
-      signal_transport: NO_SIGNAL
       config: {get_resource: NovaComputeConfig}
       server: {get_resource: NovaCompute}
       input_values:
