Remove NO_SIGNAL from ControllerBootstrapNodeDeployment
We need to be sure the boostrap node data has been propagated to the
cluster before proceeding with configuration, because
ControllerNodesPostDeployment consumes the data put in place by this
and depends_on for serialization, which is essentially meaningless when
combined with NO_SIGNAL.

Change-Id: I73a1e5a2cda4c79f457bfbd9ce2836dc5c1902cc

--- a/bootstrap-config.yaml
+++ b/bootstrap-config.yaml
@@ -12,6 +12,7 @@ resources:
   BootstrapNodeConfigImpl:
     type: OS::Heat::StructuredConfig
     properties:
+      group: os-apply-config
       config:
         bootstrap_host:
           bootstrap_nodeid: {get_param: bootstrap_nodeid}
