--- a/puppet/bootstrap-config.yaml
+++ b/puppet/bootstrap-config.yaml
@@ -12,6 +12,7 @@ resources:
   BootstrapNodeConfigImpl:
     type: OS::Heat::StructuredConfig
     properties:
+      group: os-apply-config
       config:
         hiera:
           datafiles:
