Remove NO_SIGNAL from ControllerClusterConfig
We want to ensure this actually worked, or subsequent configuration
steps may fail.

Change-Id: Ia9ae12e70dd32dd3ae6c26cbfd3e3e2dba5d272f

--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -860,6 +860,7 @@ resources:
   ControllerClusterConfig:
     type: OS::Heat::StructuredConfig
     properties:
+      group: os-apply-config
       config:
         corosync:
           nodes: {get_attr: [Controller, corosync_node]}
@@ -877,7 +878,6 @@ resources:
     properties:
       config: {get_resource: ControllerClusterConfig}
       servers: {get_attr: [Controller, attributes, nova_server_resource]}
-      signal_transport: NO_SIGNAL
 
   ControllerAllNodesDeployment:
     type: OS::Heat::StructuredDeployments
