Bind novncproxy to its own network
By default the nova vncproxy binds to 0.0.0.0, which will fail in
a loadbalanced environment.  This makes it bind to its network.

Change-Id: I08776a8f6c72b63d73433b147c130fbc9a7110b0

--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -969,6 +969,7 @@ resources:
                 nova::network::neutron::neutron_admin_password: {get_input: neutron_password}
                 nova::network::neutron::neutron_url: {get_input: neutron_url}
                 nova::network::neutron::neutron_admin_auth_url: {get_input: neutron_admin_auth_url}
+                nova::vncproxy::host: {get_input: nova_api_network}
 
                 # Horizon
                 horizon::django_debug: {get_input: debug}
