Move sysctl settings into hieradata
This will configure the sysctl settings via puppet instead of
sysctl image element.

Change-Id: Ieb129d4cbe4b6d4184172631499ecd638073564f

--- a/puppet/hieradata/common.yaml
+++ b/puppet/hieradata/common.yaml
@@ -12,3 +12,11 @@ nova::network::neutron::neutron_admin_username: 'neutron'
 nova::network::neutron::vif_plugging_is_fatal: false
 nova::network::neutron::vif_plugging_timeout: 30
 nova::network::neutron::dhcp_domain: ''
+
+sysctl_settings:
+  net.ipv4.tcp_keepalive_intvl:
+    value: 1
+  net.ipv4.tcp_keepalive_probes:
+    value: 5
+  net.ipv4.tcp_keepalive_time:
+    value: 5
